feat/WebSocket-TEST

--- a/ws-test/src/main/resources/application.properties
+++ b/ws-test/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=ssafy
 # log
 logging.level.root=INFO
 logging.level.org.springframework=debug
+
+#thymeleaf cache 삭제
+spring.thymeleaf.cache=false
